[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koi-net-CHANGE-NAME-node"
version = "0.1.0"
description = "SET NODE DESCRIPTION"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net>=1.1.0b8",
    "rich>=14.0.0"
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build"]

[project.urls]
# Homepage = "SET TO NODE REPO URL"