[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koi-net-slack-bridge-node"
version = "0.1.0"
description = "Forwards knowledge objects to a Slack channel"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net>=1.1.0b8",
    "rich>=14.0.0",
    "slack_bolt"
]

[project.optional-dependencies]
dev = ["twine>=6.0", "build"]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-slack-bridge-node"

[tool.uv.workspace]
members = [
    "test",
]
