[project]
name = "koi-net-slack-bridge-node"
version = "0.1.1"
description = "Forwards knowledge objects to a Slack channel"
authors = [
    {name = "Luke Miller", email = "luke@block.science"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "koi-net~=2.0",
    "slack_bolt"
]

[project.urls]
Homepage = "https://github.com/BlockScience/koi-net-slack-bridge-node"
